# knowledge-hub

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.json  vite.config.ts
.codegraph/: .gitignore  daemon.pid
docs/: DEPLOY-DOCKER.md  OKF开发文档.md  OKF引入方案.md  QUICKSTART.md  architecture-v2-roadmap.md  architecture.md  当前版本知识库管理优化方案.md  标注结果回写设计：从软提示到确定性覆盖.md  知识库体系设计：可信性、可维护性与结构性保证.md  知识库体系重构实施方案.md  知识库立法机制：策划治理与Agent反馈闭环.md  知识飞轮.html  策划立法现状与问题.md
scripts/: reset-flywheel.mjs  restore-seed.mjs  svn-bootstrap.ps1  tauri-dev.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/: annotation-writeback-automation.test.ts  api.test.ts  asset-service.test.ts  attribution-audit-service.test.ts  component-content.test.ts  db.test.ts  diagnostics-stream.test.ts  finding-enrichment.test.ts  kb-builder-convert.test.ts  kb-builder-extract.test.ts  kb-builder-llm-client.test.ts  kb-builder-materialize.test.ts  kb-builder-model-connectivity.test.ts  kb-builder-quality.test.ts  kb-builder-schema.test.ts  kb-builder-service.test.ts  kb-builder-specs.test.ts  kb-builder-table-graph.test.ts  knowledge-lint.test.ts  knowledge-query-service.test.ts  legacy-import.test.ts  legacy-scan.test.ts  legislation-editor.test.ts  legislation-service.test.ts  mcp-streamable-http.test.ts  okf-conformance.test.ts  okf-frontmatter.test.ts  package-scripts.test.ts  release-scoped-guard.test.ts  (+10 more)
(+141 files in other folders)
