[package]
name = "knowledge-hub"
version = "0.1.0"
description = "Knowledge Hub Desktop"
authors = ["you"]
edition = "2021"

[lib]
name = "knowledge_hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
